css/style.css
/* ... */
.sticky-wrapper {
  position: absolute;
  z-index: 100;
  width: 100%;
}
.sticky-wrapper .site-navbar {
  -webkit-transition: 0.3s all ease;
  -o-transition: 0.3s all ease;
  transition: 0.3s all ease;
}
.sticky-wrapper .site-navbar .site-menu-toggle {
  color: #fff;
}
.sticky-wrapper .site-navbar .site-menu-toggle .icon-menu {
  color: #fff;
}
.sticky-wrapper .site-navbar .site-logo a {
  color: #fff;
}
.sticky-wrapper .site-navbar .site-menu > li > a {
  color: rgba(255, 255, 255, 0.7) !important;
}
.sticky-wrapper .site-navbar .site-menu > li > a:hover,
.sticky-wrapper .site-navbar .site-menu > li > a.active {
  color: #fff !important;
}
.sticky-wrapper.is-sticky .site-navbar {
  background: #fff;
  border-bottom: 1px solid transparent;
  -webkit-box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.1);
  box-shadow: 4px 0 20px -5px rgba(0, 0, 0, 0.1);
}
.sticky-wrapper.is-sticky .site-navbar .site-menu-toggle {
  color: #000;
}
.sticky-wrapper.is-sticky .site-navbar .site-menu-toggle .icon-menu {
  color: #000;
}
.sticky-wrapper.is-sticky .site-navbar .site-logo a {
  color: #000;
}
.sticky-wrapper.is-sticky .site-navbar .site-menu > li > a {
  color: #000 !important;
}
.sticky-wrapper.is-sticky .site-navbar .site-menu > li > a:hover,
.sticky-wrapper.is-sticky .site-navbar .site-menu > li > a.active {
  color: #cf2a56 !important;
}
.sticky-wrapper .shrink {
  padding-top: 10px !important;
  padding-bottom: 10px !important;
}

/* Blocks */
.site-blocks-cover {
  background-size: cover;
  background-repeat: no-repeat;
  background-position: top;
  background-position: center center;
  overflow: hidden;
  position: relative;
}
.site-blocks-cover .lead,
.site-blocks-cover p {
  font-size: 1.3rem;
  color: #fff;
}
.site-blocks-cover.overlay {
  position: relative;
}
.site-blocks-cover,
.site-blocks-cover > .container > .row {
  min-height: 600px;
  height: calc(100vh);
}
.site-blocks-cover.blog,
.site-blocks-cover > .container > .blog {
  min-height: 435px;
  height: calc(50vh);
}
.site-blocks-cover.inner-page-cover,
.site-blocks-cover.inner-page-cover > .container > .row {
  min-height: 400px;
  height: calc(20vh);
}
.site-blocks-cover .text-intro {
  position: relative;
  z-index: 2;
}
.site-blocks-cover h1 {
  font-size: 3rem;
}
.site-blocks-cover .img-face {
  position: absolute;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  z-index: 1;
  width: 100%;
}
@media (max-width: 991.98px) {
  .site-blocks-cover .img-face {
    -webkit-transform: translate(-70%, -50%);
    -ms-transform: translate(-70%, -50%);
    transform: translate(-70%, -50%);
  }
}

.section-title {
  position: relative;
}
.section-title:after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  height: 2px;
  background: #fab95b;
  width: 50px;
  display: none;
}
.section-title.text-center:after {
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}
.section-title.text-center:after {
  background: #fff;
}

.position-relative {
  position: relative;
}

.service {
  padding: 30px;
  background: #fff;
  -webkit-box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.1);
  box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.1);
  -webkit-transition: 0.3s all ease-in-out;
  -o-transition: 0.3s all ease-in-out;
  transition: 0.3s all ease-in-out;
  top: 0;
  position: relative;
}
.service:hover {
  -webkit-box-shadow: 0 8px 50px -5px rgba(0, 0, 0, 0.1);
  box-shadow: 0 8px 50px -5px rgba(0, 0, 0, 0.1);
  top: -2px;
}
.service .service-number {
  -webkit-box-flex: 0;
  -ms-flex: 0 0 60px;
  flex: 0 0 60px;
}
.service .service-number span {
  position: relative;
  width: 50px;
  height: 50px;
  line-height: 50px;
  border-radius: 50%;
  background: #cf2a56;
  display: inline-block;
  color: #fff;
  text-align: center;
}
.service .service-about *:last-child {
  margin-bottom: 0;
}
.service .service-about h3 {
  font-size: 1.2rem;
  margin-bottom: 10px;
}

.gal-item {
  margin-bottom: 30px;
}

.filters .btn {
  border-color: transparent;
  font-size: 0.8rem;
  margin: 5px;
  letter-spacing: 0.2rem;
  background: rgba(52, 58, 64, 0.05);
  color: #343a40;
  padding: 5px 20px;
  border-radius: 30px !important;
  border: none !important;
  text-transform: uppercase;
}
.filters .btn:hover,
.filters .btn:focus,
.filters .btn:active {
  border-color: transparent !important;
  background: rgba(52, 58, 64, 0.3) !important;
  color: #000;
}
.filters .btn.active {
  background: #000 !important;
  color: #fff;
  border-color: #000 !important;
}

/* Isotope Transitions
------------------------------- */
.isotope,
.isotope .item {
  -webkit-transition-duration: 0.8s;
  -moz-transition-duration: 0.8s;
  -ms-transition-duration: 0.8s;
  -o-transition-duration: 0.8s;
  transition-duration: 0.8s;
}

.isotope {
  -webkit-transition-property: height, width;
  -moz-transition-property: height, width;
  -ms-transition-property: height, width;
  -o-transition-property: height, width;
  transition-property: height, width;
}

.isotope .item {
  -webkit-transition-property: -webkit-transform, opacity;
  -moz-transition-property: -moz-transform, opacity;
  -ms-transition-property: -ms-transform, opacity;
  -o-transition-property: top, left, opacity;
  -webkit-transition-property: opacity, -webkit-transform;
  transition-property: opacity, -webkit-transform;
  -o-transition-property: transform, opacity;
  transition-property: transform, opacity;
  transition-property: transform, opacity, -webkit-transform;
}

/* responsive media queries */
.item {
  border: none;
  margin-bottom: 30px;
  border-radius: 4px;
  display: block;
}
.item a {
  display: block;
  overflow: hidden;
  position: relative;
  border-radius: 4px;
  display: block;
}
/* ... */

